--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
-﻿{
-  "name": "meet-me",
+{
   "version": "1.0.0",
-  "description": "Personal dating landing page",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vercel dev",
-    "deploy": "vercel deploy --prod"
-  },
-  "author": "Artem",
   "license": "UNLICENSED",
+  "name": "meet-me",
+  "scripts": {
+    "deploy": "vercel deploy --prod",
+    "dev": "vercel dev"
+  },
+  "description": "Personal dating landing page",
+  "author": "Artem",
   "devDependencies": {
     "vercel": "^32.0.0"
-  }
+  },
+  "main": "index.js"
 }
